--- a/MWM/MWM-Info.plist
+++ b/MWM/MWM-Info.plist
@@ -36,7 +36,10 @@
 			<array>
 				<string>Default@2x.png</string>
 				<string>icon@2x.png</string>
+				<string>Default.png</string>
 			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -48,11 +51,13 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>0.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>0.1</string>
+	<key>UILaunchImageFile~iphone</key>
+	<string>Default.png</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIAppFonts</key>
@@ -67,6 +72,8 @@
 	<array>
 		<string>bluetooth-central</string>
 	</array>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
