--- a/MWM/MWM-Info.plist
+++ b/MWM/MWM-Info.plist
@@ -83,5 +83,16 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.metawatch.mwm</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>mwm</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
