added some test commands for power measurements

--- a/MWM/MWM-Info.plist
+++ b/MWM/MWM-Info.plist
@@ -9,20 +9,15 @@
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
-			<key>CFBundleTypeIconFiles</key>
-			<array>
-				<string>Document-molecules-320.png</string>
-				<string>Document-molecules-64.png</string>
-			</array>
 			<key>CFBundleTypeName</key>
-			<string>MetaWatch Bitmap</string>
+			<string>Meta Watch Screen</string>
 			<key>CFBundleTypeRole</key>
 			<string>Viewer</string>
 			<key>LSHandlerRank</key>
 			<string>Owner</string>
 			<key>LSItemContentTypes</key>
 			<array>
-				<string>com.microsoft.bmp</string>
+				<string>com.mwm.mwmscreen</string>
 			</array>
 		</dict>
 	</array>
@@ -50,7 +45,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.1.7</string>
+	<string>0.1.8</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -65,7 +60,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>0.1.7</string>
+	<string>0.1.8</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIAppFonts</key>
@@ -92,6 +87,10 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+	</array>
+	<key>UTImportedTypeDeclarations</key>
+	<array>
+		<dict/>
 	</array>
 </dict>
 </plist>
