--- a/MWM/MWM-Info.plist
+++ b/MWM/MWM-Info.plist
@@ -45,7 +45,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.1.9</string>
+	<string>0.1.11</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -60,7 +60,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>0.1.9</string>
+	<string>0.1.11</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIAppFonts</key>
@@ -71,6 +71,8 @@
 		<string>metawatch_8pt_7pxl_CAPS.ttf</string>
 		<string>metawatch_16pt_11pxl.ttf</string>
 		<string>unifont-5.1.20080907.ttf</string>
+		<string>mingliu.TTC</string>
+		<string>MS_PGothic.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
